--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Sentry error logging (optional)
-Websites from /r/InternetIsBeautiful (from discu.eu?)
 discussions: if nothing found for main site, redirect to search with site: prefix (example https://discu.eu/q/site:boston.conman.org)
+
+telegram channels
+whatsapp channels
